[tool.poetry]
name = "makehuman"
version = "1.2.1"
description = ""
authors = ["Martin Heubuch <martin.heubuch@escad.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.17.4"
pyqt5-qt5 = "5.15.2"
PyQt5 = "5.15.10"
PyOpenGL = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
